--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,17 +1,18 @@
 api_config:
   providers:
-    # openai:
-    #   base_url: https://api.openai.com/v1
-    #   keys: [key1, key2]
-    # anthropic:
-    #   base_url: https://api.anthropic.com/v1
-    #   keys: [key3]
+    openai:
+      base_url: https://api.openai.com/v1
+      keys: [key1, key2]
+    anthropic:
+      base_url: https://api.anthropic.com/v1
+      keys: [key3]
     dify:
       base_url: https://api.dify.ai/v1
       keys: [app-eDLJdYzEekWwvQ4NiG0SuO6o]
   ttl: 300  # 5 minutes
   load_balancing: true
   max_workers: 5
+  default_provider: dify
 
 api_specs:
   openai:
@@ -38,6 +39,7 @@ api_specs:
       user: "test"
 
 logging:
+  version: 1
   level: INFO
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 
